css/responsive.css
.display_hide{
  display: none;
}

.mb-20{
  margin-bottom: 20px;
}

.btn_primary_style{
  font-weight: 600;
  font-size: 18px;
  line-height: 20px;
  background-color: transparent;
  color: var(--primary_color);
  border: 2px solid var(--primary_color);
  padding: 9px 45px;
  border-radius: 70px;
  transition: all 400ms ease;
}

/* ≥ 576px */
@media (max-width: 479px) {
  #desktop_menu{
    display: none;
  }

  #mobile_menu{
    display: block;
    padding: 20px;
  }

  .mobile_menu_sidebar{
    position: fixed;
    top: 0;
    right: 0;
    width: 220px;
    height: 100%;
    background-color: white;
    transform: translateX(100%);
    transition: 0.4s;
    z-index: 999;
    overflow-x: auto;
    padding: 30px;
    box-shadow: 0 0 10px rgba(0,0,0,0.1);
  }

  .mobile_menu_sidebar.active{
    transform:translateX(0);
  }

  .mobile_close_btn{
    text-align: right;
    margin-bottom: 20px;
    
  }

  .mobile_menu_list{
    list-style: none;
    padding: 0;
  }

  .mobile_menu_list li{
    margin-bottom:15px;
  }

  .mobile_menu_list li a,.mobile_my_account li a{
    color: #333333;
    font-size: 18px;
    font-weight: 600;
  }

  .mobile_my_account li a{
    color: #5f5e5e;
    font-weight: 500;
  }

  .siteLogo{
    width: 20%;
  }

  .plus_icon,.minus_icon{
    color: #908f8f;
    font-size: 12px;
  }

  .minus_icon{
    display: none;
  }

  .mobile_home_diff_styles,.mobile_shop_diff_styles,.mobile_my_account_menu{
    max-height: 0;
    overflow: hidden;
    opacity: 0;
    transform: translateY(0);
    transition: max-height 400ms ease, opacity 400ms ease, transform 400ms ease;
  }

  .mobile_home_diff_styles.showDropdown,.mobile_shop_diff_styles.showDropdown,.mobile_my_account_menu.showDropdown{
    max-height: 300px;
    opacity: 1;
    transform: translateY(10px);
  }

  .mobile_home_diff_styles li a,.mobile_shop_diff_styles li a,.mobile_my_account_menu li a{
    font-weight: 400;
    font-size: 16px;
  }

  .mobile_home_diff_styles li a:hover,.mobile_shop_diff_styles li a:hover,.mobile_my_account_menu li a:hover{
    color: #00bfc5;
  }

  .mobile_my_account{
    margin-top: 40px;
    padding-left: 0;
  }




  /* banner */
  .banner_slider_1,.banner_slider_2,.banner_slider_3{
    background: none;
    padding-top: 100px;
    padding-bottom: 100px;
    background-color: rgba(255, 182, 193, 0.324);
  }

  .banner_swiper_nav{
    display: none;
  }

  .banner_text h2,.banner_text_3 h2{
    font-weight: 600;
    font-size: 30px;
    margin-top: -20px;
  }

  .banner_text p,.banner_text_3 p{
    margin-top: -10px;
  }

  .banner_text_3{
    text-align: left;
  }

  .banner_slider_2{
    height: auto;
  }



  /* book collection */
  .book_collection_section{
    margin: 0px 10px;
    margin-top: 120px;
  }

  .our_products_section .section_title{
    font-size: 30px;
  }

  .book_collection_1,.book_collection_2{
    margin-bottom: 30px;
  }

  .book_name h3{
    font-size: 17px;
  }



  /* testimonial */
  .testimonial_text{
    width: 100%;
  }

  .testimonial_swiper_nav{
    display: none;
  }



  /* featured collection */
  .featuredBook_collection .section_title{
    font-size: 30px;
  }

  .first_row_images,.second_row_images{
    margin: 0 10px;
  }



  /* book list */
  .book_list_section{
    margin: 0 10px;
    margin-top: 120px;
  }

  .divider{
    margin-top: 60px;
    margin-bottom: 60px;
  }

  /* blog section */
  .blog_section .section_title{
    font-size: 30px
  }

  .blog_section{
    margin: 0 10px;
  }


  /* newsletter section */
  .newsletter_section{
    margin-top: 60px;
  }

  .newsletter_section .section_title{
    font-size: 30px;
  }

  form input{
    width: 100%;
    margin: 0 12px;
  }


  .newsletter_btn{
    font-size: 12px;
    font-weight: 600;
    line-height: 28px;
    position: absolute;
    top: 50%;
    right: 30px;
    width: 100px;
    transform: translateY(-50%);
    border-left: 2px solid #ebebeb;
    background: none;
  }



  /* footer */
  .footer_timing_menu{
    margin-left: 0px;
  }
}
/* ... */

